--- a/index_english.html
+++ b/index_english.html
@@ -26,10 +26,10 @@
   <header>
     <nav>
       <div class="navbar">
-        <a href="#Slide one" class="active"><img src="img\home.svg" alt=""></a>
-        <a href="#Slide two"><img src="img\portfolio.svg" alt=""></a>
-        <a href="#Slide three"><img src="img\history.svg" alt=""></a>
-        <a href="#Slide four"><img src="img\Skills.svg" alt="" id="skills"></a>
+        <a href="#Slide_one" class="active"><img src="img\home.svg" alt=""></a>
+        <a href="#Slide_two"><img src="img\portfolio.svg" alt=""></a>
+        <a href="#Slide_three"><img src="img\history.svg" alt=""></a>
+        <a href="#Slide_four"><img src="img\Skills.svg" alt="" id="skills"></a>
       </div>
     </nav>
   </header>
@@ -38,7 +38,7 @@
 
   <div class="outer-wrapper">
     <div class="wrapper">
-      <div class="slide one" id="Slide one">
+      <div class="slide one" id="Slide_one">
         <section class="Intro">
           <section id="langage_switch">
             <a href="index.html"><img src="img/frenchflagframed.svg" alt="French Flag to change language"></a>
@@ -48,7 +48,7 @@
           </div>
           <div id="div">
             <div id="download">
-              <a href="img/CV version Papier.pdf" download target="_blank">
+              <a href="img/CV_version_Papier.pdf" download target="_blank">
                 <svg style="width: 200px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
                   <g id="template">
                     <circle cx="500" cy="202.87" r="43.6" />
@@ -136,7 +136,7 @@
           </section>
         </section>
       </div>
-      <div class="slide two" id="Slide two">
+      <div class="slide two" id="Slide_two">
         <section class="portfolio">
           <div>
             <div class="header d-flex flex-column align-items-center">
@@ -149,7 +149,7 @@
 
               <a data-lg-size="1400-1400" class="gallery-item" data-src="img/Fatzilla.png"
                 data-sub-html="<h4>Photo by - Monnier Maxence</h4> <p> Location - <a href='https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan'>Fushimi Ward, Kyoto, Japan</a></p>">
-                <img class="img-fluid" src="img/Fatzilla.png" />
+                <img class="img-fluid" src="img/Fatzilla.png" alt="gros chat">
               </a>
               <!-- <a data-lg-size="1443-1329" class="gallery-item"
                 data-src="https://images.unsplash.com/photo-1563502310703-1ffe473ad66d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1443&q=80"
@@ -198,33 +198,33 @@
           </svg>
         </section>
       </div>
-      <div class="slide three" id="Slide three">
+      <div class="slide three" id="Slide_three">
         <section class="Formations">
         </section>
         <section class="Expériences">
           <div id="timeline-content" >
             <ul class="timeline">
-              <li class="event" class="eventG" data-date="2022 - Still Ongoing">
+              <li class="event eventG" data-date="2022 - Still Ongoing">
 
                 <h3>Versatile Worker • Coding classes.</h3>
 
                 <p>Learning various tools and web development at Ageval.</p>
               </li>
-              <li class="event" class="eventD" data-date="2021-2022">
+              <li class="event eventD"  data-date="2021-2022">
 
                 <h3>IT helpdesk • Civic Service.</h3>
 
                 <p>IT helpdesk for Condé-sur-l'Escaut's Pole Emploi.</p>
               </li>
-              <li class="event" class="eventG" class="eventG" id="date" data-date="2019 - Still Ongoing">
+              <li class="event eventG"  id="date" data-date="2019 - Still Ongoing">
                 <h3>Moderator • Volunteer Experience.</h3>
                 <p>Moderator of an international online community.</p>
               </li>
 
-              <li class="event" class="eventD" data-date="2018-2020">
+              <li class="event eventD"  data-date="2018-2020">
                 <h3>English Licence.</h3>
                 <p>Lille 3 University.</p>
-                <li class="event" class="eventG" data-date="2018">
+                <li class="event eventG"  data-date="2018">
                   <h3>High School Diploma.</h3>
                   <p>Literature and English focused.</p>
               </li>
@@ -263,7 +263,7 @@
           </svg>
         </section>
       </div>
-      <div class="slide four" id="Slide four">
+      <div class="slide four" id="Slide_four">
         <section class="Skills">
 
             <div class="flip-card-3D-wrapper">
@@ -271,11 +271,11 @@
                   <div class="flip-card-front">
                     <div class="container">
                       <div class="HTML">
-                        <img src="img/HTML vector.svg" alt="html">
+                        <img src="img/HTML_vector.svg" alt="html">
                         <div class="text-logo">HTML 5</div>
                       </div>
                       <div class="CSS">
-                        <img src="img/CSS vector.svg" alt="css">
+                        <img src="img/CSS_vector.svg" alt="css">
                         <div class="text-logo">CSS 3</div>
                       </div>
                       <div class="JS">
