--- a/index_english.html
+++ b/index_english.html
@@ -151,13 +151,13 @@
                 data-sub-html="<h4>Photo by - Monnier Maxence</h4> <p> Location - <a href='https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan'>Fushimi Ward, Kyoto, Japan</a></p>">
                 <img class="img-fluid" src="img/Fatzilla.png" alt="gros chat">
               </a>
-              <!-- <a data-lg-size="1443-1329" class="gallery-item"
-                data-src="https://images.unsplash.com/photo-1563502310703-1ffe473ad66d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1443&q=80"
-                data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@asoshiation' >Shah </a></h4><p> Location - <a href='https://unsplash.com/s/photos/shinimamiya%2C-osaka%2C-japan'>Shinimamiya, Osaka, Japan</a></p>">
+              <a data-lg-size="1443-1329" class="gallery-item"
+                data-src="img/Samourai_Cat.png"
+                data-sub-html="<h4>Photo by - Maxence Monnier </h4>">
                 <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1563502310703-1ffe473ad66d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
+                  src="img/Samourai_Cat.png" alt="Une affiche de film type Samourai avec des animaux" />
               </a>
-              <a data-lg-size="1400-1402" class="gallery-item"
+              <!-- <a data-lg-size="1400-1402" class="gallery-item"
                 data-src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"
                 data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
                 <img class="img-fluid"
