Update post stages

--- a/index.html
+++ b/index.html
@@ -208,6 +208,18 @@
             <ul class="timeline">
               <li class="event eventG"  data-date="2022 - Aujourd'hui">
 
+                <h3>Stage • Médiathèque d'Anzin.</h3>
+
+                <p>Contribution à l'élaboration d'un atelier numérique autours d'un PC gamer.</p>
+              </li>
+              <li class="event eventD"  data-date="2024 - 2024">
+
+                <h3>Stage • Médiathèque Le Quais (Condé sur Escaut)</h3>
+
+                <p>Découverte des missions de médiathécaire, incluant l'accueil du public, la gestion des collections et l'organisation d'événements culturels.</p>
+              </li>
+              <li class="event eventG"  data-date="2022 - Aujourd'hui">
+
                 <h3>Employé Polyvalent • Atelier Numérique.</h3>
 
                 <p>Exploration du numérique et du développement web à l'Atelier Numérique d'Ageval.</p>
