--- a/index.html
+++ b/index.html
@@ -159,29 +159,30 @@
                 <img class="img-fluid"
                   src="img/Samourai_Cat.png" alt="Une affiche de film type Samourai avec des animaux" />
               </a>
-              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="300" height="370" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F544RkJdQFFiI8O9y28mq5B%2FAgeval-Stock%3Fpage-id%3D789%253A37444%26node-id%3D789-37506%26viewport%3D1104%252C603%252C1.08%26t%3Dpj0plmmZgYz3xM7j-1%26scaling%3Dmin-zoom" allowfullscreen></iframe>
-              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="370" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F544RkJdQFFiI8O9y28mq5B%2FAgeval-Stock%3Fpage-id%3D0%253A1%26node-id%3D530-4329%26viewport%3D817%252C-3200%252C0.32%26t%3DS6rGRGVZAQ3jw9p6-1%26scaling%3Dscale-down%26starting-point-node-id%3D11%253A811" allowfullscreen></iframe>
+              <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="300" height="570" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F544RkJdQFFiI8O9y28mq5B%2FAgeval-Stock%3Fpage-id%3D789%253A37444%26node-id%3D789-37506%26viewport%3D1104%252C603%252C1.08%26t%3Dpj0plmmZgYz3xM7j-1%26scaling%3Dmin-zoom" allowfullscreen></iframe>
+              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="854" height="480" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F544RkJdQFFiI8O9y28mq5B%2FAgeval-Stock%3Fpage-id%3D0%253A1%26node-id%3D530-4329%26viewport%3D817%252C-3200%252C0.32%26t%3DS6rGRGVZAQ3jw9p6-1%26scaling%3Dscale-down%26starting-point-node-id%3D11%253A811" allowfullscreen></iframe>
               
-              
-              <a data-lg-size="1400-1402" class="gallery-item"
+               -->
+              <a data-lg-size="1400-1402" class="gallery-item" id="newsletter"
               data-src="img/Compte Rendu Séminaire.png"
               data-sub-html="<p>Le template de Newsletter pour les comptes rendus réguliers de la collaboration entre Agevel et Seve Emploi</p>">
               <img class="img-fluid"
                 src="img/Compte Rendu Séminaire.png" alt="Le template de Newsletter pour les comptes rendus réguliers de la collaboration entre Agevel et Seve Emploi "/>
             </a> 
-            <!-- <a data-lg-size="1400-1402" class="gallery-item"
-            data-src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"
-            data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
-            <img class="img-fluid"
-              src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
-          </a> 
+
           <a data-lg-size="1400-1402" class="gallery-item"
-          data-src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"
-          data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
+          data-src="img/Page d'accueuil AgeStock Mobile.png"
+          data-sub-html="<h4><a href='https://www.figma.com/proto/544RkJdQFFiI8O9y28mq5B/Ageval-Stock?page-id=789%3A37444&node-id=789-37506&viewport=1339%2C44%2C0.59&t=5wIeNXA1ltEXOkLF-1&scaling=min-zoom&starting-point-node-id=789%3A37506' >Maxence Monnier </a></h4><p> Maquette Mobile pour une application de gestion de stocks <a>https://www.figma.com/proto/544RkJdQFFiI8O9y28mq5B/Ageval-Stock?page-id=0%3A1&node-id=530-4329&viewport=1268%2C-2828%2C0.31&t=ptHdXiQM8lbDCXWT-1&scaling=scale-down<a/> </p>">
           <img class="img-fluid"
-            src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
+            src="img/Page d'accueuil AgeStock Mobile.png" />
         </a> 
-        <a data-lg-size="1400-1402" class="gallery-item"
+        <a data-lg-size="1400-1402" class="gallery-item" id="maquette_desktop"
+        data-src="img/Page d'accueuil AgeStock Desktop.png"
+        data-sub-html="<a href='https://www.figma.com/proto/544RkJdQFFiI8O9y28mq5B/Ageval-Stock?page-id=0%3A1&node-id=530-4329&viewport=1268%2C-2828%2C0.31&t=ptHdXiQM8lbDCXWT-1&scaling=scale-down' >Monnier Maxence </a> <p> Maquette PC pour une application de gestion de stocks <a>https://www.figma.com/proto/544RkJdQFFiI8O9y28mq5B/Ageval-Stock?page-id=0%3A1&node-id=530-4329&viewport=1268%2C-2828%2C0.31&t=ptHdXiQM8lbDCXWT-1&scaling=scale-down<a/></p>">
+        <img class="img-fluid"
+          src="img/Page d'accueuil AgeStock Desktop.png" />
+      </a> 
+        <!-- <a data-lg-size="1400-1402" class="gallery-item"
         data-src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"
         data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
         <img class="img-fluid"
