close cross test

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="gallery-container d-flex align-items-center justify-content-center" id="gallery-container">
 
               <a data-lg-size="1400-1400" class="gallery-item" data-src="img/Fatzilla.png"
-                data-sub-html="<h4>Photo by - Monnier Maxence</h4>">
+                data-sub-html="<h4>Photo by - Maxence Monnier </h4>">
                 <img class="img-fluid" src="img/Fatzilla.png" alt="gros chat">
               </a>
               <a data-lg-size="1443-1329" class="gallery-item"
