--- a/index_english.html
+++ b/index_english.html
@@ -48,7 +48,7 @@
           </div>
           <div id="div">
             <div id="download">
-              <a href="img/CV_version_Papier.pdf" download target="_blank">
+              <a href="img/English CV Maxence Monnier.pdf" download target="_blank">
                 <svg style="width: 200px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
                   <g id="template">
                     <circle cx="500" cy="202.87" r="43.6" />
@@ -130,7 +130,7 @@
               </li>
               <li><a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/" target="_blank">  My Linkedin Profile  </a>
               </li>
-              <li> Driving Licence • Car                
+              <li> Driver’s license and personal vehicle                
               </li>
             </ul>
           </section>
@@ -142,13 +142,13 @@
             <div class="header d-flex flex-column align-items-center">
               <h1 class="display-6 mt-3 mb-0">Portfolio</h1>
               <p class="lead mt-2 mb-4">
-                Here are my creative project.
+                Voici mes projets.
               </p>
             </div>
             <div class="gallery-container d-flex align-items-center justify-content-center" id="gallery-container">
 
               <a data-lg-size="1400-1400" class="gallery-item" data-src="img/Fatzilla.png"
-                data-sub-html="<h4>Photo by - Monnier Maxence</h4> <p> Location - <a href='https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan'>Fushimi Ward, Kyoto, Japan</a></p>">
+                data-sub-html="<h4>Photo by - Maxence Monnier </h4>">
                 <img class="img-fluid" src="img/Fatzilla.png" alt="gros chat">
               </a>
               <a data-lg-size="1443-1329" class="gallery-item"
@@ -157,12 +157,47 @@
                 <img class="img-fluid"
                   src="img/Samourai_Cat.png" alt="Une affiche de film type Samourai avec des animaux" />
               </a>
-              <!-- <a data-lg-size="1400-1402" class="gallery-item"
-                data-src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"
-                data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
-                <img class="img-fluid"
-                  src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
-              </a> -->
+              <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="300" height="570" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F544RkJdQFFiI8O9y28mq5B%2FAgeval-Stock%3Fpage-id%3D789%253A37444%26node-id%3D789-37506%26viewport%3D1104%252C603%252C1.08%26t%3Dpj0plmmZgYz3xM7j-1%26scaling%3Dmin-zoom" allowfullscreen></iframe>
+              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="854" height="480" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F544RkJdQFFiI8O9y28mq5B%2FAgeval-Stock%3Fpage-id%3D0%253A1%26node-id%3D530-4329%26viewport%3D817%252C-3200%252C0.32%26t%3DS6rGRGVZAQ3jw9p6-1%26scaling%3Dscale-down%26starting-point-node-id%3D11%253A811" allowfullscreen></iframe>
+              
+               -->
+              <a data-lg-size="1400-1402" class="gallery-item" id="newsletter"
+              data-src="img/Compte Rendu Séminaire.png"
+              data-sub-html="<p>Le template de Newsletter pour les comptes rendus réguliers de la collaboration entre Agevel et Seve Emploi</p>">
+              <img class="img-fluid"
+                src="img/Compte Rendu Séminaire.png" alt="Le template de Newsletter pour les comptes rendus réguliers de la collaboration entre Agevel et Seve Emploi "/>
+            </a> 
+
+          <a data-lg-size="1400-1402" class="gallery-item"
+          data-src="img/Page d'accueuil AgeStock Mobile.png"
+          data-sub-html="<h4><a href='https://www.figma.com/proto/544RkJdQFFiI8O9y28mq5B/Ageval-Stock?page-id=789%3A37444&node-id=789-37506&viewport=1339%2C44%2C0.59&t=5wIeNXA1ltEXOkLF-1&scaling=min-zoom&starting-point-node-id=789%3A37506' >Maxence Monnier </a></h4><p> Maquette Mobile pour une application de gestion de stocks <a>https://www.figma.com/proto/544RkJdQFFiI8O9y28mq5B/Ageval-Stock?page-id=0%3A1&node-id=530-4329&viewport=1268%2C-2828%2C0.31&t=ptHdXiQM8lbDCXWT-1&scaling=scale-down<a/> </p>">
+          <img class="img-fluid"
+            src="img/Page d'accueuil AgeStock Mobile.png" />
+        </a> 
+        <a data-lg-size="1400-1402" class="gallery-item" id="maquette_desktop"
+        data-src="img/Page d'accueuil AgeStock Desktop.png"
+        data-sub-html="<a href='https://www.figma.com/proto/544RkJdQFFiI8O9y28mq5B/Ageval-Stock?page-id=0%3A1&node-id=530-4329&viewport=1268%2C-2828%2C0.31&t=ptHdXiQM8lbDCXWT-1&scaling=scale-down' >Monnier Maxence </a> <p> Maquette PC pour une application de gestion de stocks <a>https://www.figma.com/proto/544RkJdQFFiI8O9y28mq5B/Ageval-Stock?page-id=0%3A1&node-id=530-4329&viewport=1268%2C-2828%2C0.31&t=ptHdXiQM8lbDCXWT-1&scaling=scale-down<a/></p>">
+        <img class="img-fluid"
+          src="img/Page d'accueuil AgeStock Desktop.png" />
+      </a> 
+        <!-- <a data-lg-size="1400-1402" class="gallery-item"
+        data-src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"
+        data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
+        <img class="img-fluid"
+          src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
+      </a> 
+      <a data-lg-size="1400-1402" class="gallery-item"
+      data-src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"
+      data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
+      <img class="img-fluid"
+        src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
+    </a> 
+    <a data-lg-size="1400-1402" class="gallery-item"
+    data-src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80"
+    data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
+    <img class="img-fluid"
+      src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
+  </a>  -->
             </div>
           </div>
           <svg version="1.1" id="Calque_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -204,29 +239,41 @@
         <section class="Expériences">
           <div id="timeline-content" >
             <ul class="timeline">
-              <li class="event eventG" data-date="2022 - Still Ongoing">
+              <li class="event eventG"  data-date="2022 - Aujourd'hui">
 
-                <h3>Versatile Worker • Coding classes.</h3>
+                <h3>Internship • Media Library - Anzin.</h3>
 
-                <p>Learning various tools and web development at Ageval.</p>
+                <p>Elaboration of activities around computers and videos games.</p>
+              </li>
+              <li class="event eventD"  data-date="2024 - 2024">
+
+                <h3>Internship • Media Library - Le Quais (Condé sur Escaut)</h3>
+
+                <p>Internship as a librarian</p>
+              </li>
+              <li class="event eventG"  data-date="2022 - 2025">
+
+                <h3>E Multi-Tasks Employee • Ageval</h3>
+
+                <p>EDigital and web development in-depth study at the Ageval Digital Workshop.</p>
               </li>
               <li class="event eventD"  data-date="2021-2022">
 
-                <h3>IT helpdesk • Civic Service.</h3>
+                <h3>AIT Desk Help • Civic Service</h3>
 
-                <p>IT helpdesk for Condé-sur-l'Escaut's Pole Emploi.</p>
+                <p>Digital mediator for the Condé-sur-l'Escaut Employment Center.</p>
               </li>
-              <li class="event eventG"  id="date" data-date="2019 - Still Ongoing">
-                <h3>Moderator • Volunteer Experience.</h3>
-                <p>Moderator of an international online community.</p>
+              <li class="event eventG"  id="date" data-date="2019 - Aujourd'hui">
+                <h3>Moderator • Volunteering</h3>
+                <p>Moderator, Social Mediator of an international online community.</p>
               </li>
 
               <li class="event eventD"  data-date="2018-2020">
-                <h3>English Licence.</h3>
-                <p>Lille 3 University.</p>
+                <h3>English Licence</h3>
+                <p>Lille University</p>
                 <li class="event eventG"  data-date="2018">
-                  <h3>High School Diploma.</h3>
-                  <p>Literature and English focused.</p>
+                  <h3>High School Diploma</h3>
+                  <p>Baccalaureate specializing in Literature, Advanced English option</p>
               </li>
             </ul>
           </div>
